adding pdf thesis.

--- a/assets/mobirise/css/mbr-additional.css
+++ b/assets/mobirise/css/mbr-additional.css
@@ -728,7 +728,7 @@ section.lazy-placeholder:after {
   text-align: left;
 }
 .cid-rJBn3T8pcH H3 {
-  color: #ffffff;
+  color: #232323;
 }
 .cid-rJBn3T8pcH DIV {
   text-align: left;
