major change on layout. No rolling videos.

--- a/assets/mobirise/css/mbr-additional.css
+++ b/assets/mobirise/css/mbr-additional.css
@@ -740,6 +740,22 @@ section.lazy-placeholder:after {
   color: #767676;
   text-align: center;
 }
+.cid-sXkgkbgBZG {
+  padding-top: 120px;
+  padding-bottom: 120px;
+}
+.cid-sXkgkbgBZG .mbr-text,
+.cid-sXkgkbgBZG .mbr-section-btn {
+  text-align: right;
+}
+.cid-sXkitLXUTS {
+  padding-top: 120px;
+  padding-bottom: 120px;
+}
+.cid-sXkitLXUTS .mbr-text,
+.cid-sXkitLXUTS .mbr-section-btn {
+  text-align: right;
+}
 .cid-qTkzRZLJNu .navbar {
   padding: .5rem 0;
   background: #465052;
@@ -1129,249 +1145,26 @@ section.lazy-placeholder:after {
 .cid-qTkzRZLJNu .dropdown-item:hover {
   color: #c1c1c1 !important;
 }
-.cid-rUGeOQF9Fa .modal-body .close {
-  background: #1b1b1b;
+.cid-sXkhfUZJpZ {
+  padding-top: 120px;
+  padding-bottom: 120px;
 }
-.cid-rUGeOQF9Fa .modal-body .close span {
-  font-style: normal;
+.cid-sXkhfUZJpZ .mbr-text,
+.cid-sXkhfUZJpZ .mbr-section-btn {
+  text-align: right;
 }
-.cid-rUGeOQF9Fa .carousel-inner > .active,
-.cid-rUGeOQF9Fa .carousel-inner > .next,
-.cid-rUGeOQF9Fa .carousel-inner > .prev {
-  display: table;
+.cid-sXkdtQtof2 {
+  padding-top: 120px;
+  padding-bottom: 120px;
 }
-.cid-rUGeOQF9Fa .carousel-control .icon-next,
-.cid-rUGeOQF9Fa .carousel-control .icon-prev {
-  margin-top: -18px;
-  font-size: 40px;
-  line-height: 27px;
+.cid-sXkjqiaAhq {
+  padding-top: 120px;
+  padding-bottom: 120px;
+  background-image: url("../../../assets/images/large-screen-shot3-1906x857.jpg");
 }
-.cid-rUGeOQF9Fa .carousel-control:hover {
-  background: #1b1b1b;
-  color: #fff;
-  opacity: 1;
-}
-@media (max-width: 767px) {
-  .cid-rUGeOQF9Fa .container .carousel-control {
-    margin-bottom: 0;
-  }
-}
-.cid-rUGeOQF9Fa .boxed-slider {
-  position: relative;
-  padding: 93px 0;
-}
-.cid-rUGeOQF9Fa .boxed-slider > div {
-  position: relative;
-}
-.cid-rUGeOQF9Fa .container img {
-  width: 100%;
-}
-.cid-rUGeOQF9Fa .container img + .row {
-  position: absolute;
-  top: 50%;
-  left: 0;
-  right: 0;
-  -webkit-transform: translateY(-50%);
-  -moz-transform: translateY(-50%);
-  transform: translateY(-50%);
-  z-index: 2;
-}
-.cid-rUGeOQF9Fa .mbr-section {
-  padding: 0;
-  background-attachment: scroll;
-}
-.cid-rUGeOQF9Fa .mbr-table-cell {
-  padding: 0;
-}
-.cid-rUGeOQF9Fa .container .carousel-indicators {
-  margin-bottom: 3px;
-}
-.cid-rUGeOQF9Fa .carousel-caption {
-  top: 50%;
-  right: 0;
-  bottom: auto;
-  left: 0;
-  display: -webkit-flex;
-  align-items: center;
-  -webkit-transform: translateY(-50%);
-  transform: translateY(-50%);
-  -webkit-align-items: center;
-}
-.cid-rUGeOQF9Fa .mbr-overlay {
-  z-index: 1;
-}
-.cid-rUGeOQF9Fa .container-slide.container {
-  min-width: 100%;
-  min-height: 100vh;
-  padding: 0;
-}
-.cid-rUGeOQF9Fa .carousel-item {
-  background-position: 50% 50%;
-  background-repeat: no-repeat;
-  background-size: cover;
-  -o-transition: -o-transform 0.6s ease-in-out;
-  -webkit-transition: -webkit-transform 0.6s ease-in-out;
-  transition: transform 0.6s ease-in-out, -webkit-transform 0.6s ease-in-out, -o-transform 0.6s ease-in-out;
-  -webkit-backface-visibility: hidden;
-  backface-visibility: hidden;
-  -webkit-perspective: 1000px;
-  perspective: 1000px;
-}
-@media (max-width: 576px) {
-  .cid-rUGeOQF9Fa .carousel-item .container {
-    width: 100%;
-  }
-}
-.cid-rUGeOQF9Fa .carousel-item-next.carousel-item-left,
-.cid-rUGeOQF9Fa .carousel-item-prev.carousel-item-right {
-  -webkit-transform: translate3d(0, 0, 0);
-  transform: translate3d(0, 0, 0);
-}
-.cid-rUGeOQF9Fa .active.carousel-item-right,
-.cid-rUGeOQF9Fa .carousel-item-next {
-  -webkit-transform: translate3d(100%, 0, 0);
-  transform: translate3d(100%, 0, 0);
-}
-.cid-rUGeOQF9Fa .active.carousel-item-left,
-.cid-rUGeOQF9Fa .carousel-item-prev {
-  -webkit-transform: translate3d(-100%, 0, 0);
-  transform: translate3d(-100%, 0, 0);
-}
-.cid-rUGeOQF9Fa .mbr-slider .carousel-control {
-  top: 50%;
-  width: 70px;
-  height: 70px;
-  margin-top: -1.5rem;
-  font-size: 35px;
-  background-color: rgba(0, 0, 0, 0.5);
-  border: 2px solid #fff;
-  border-radius: 50%;
-  transition: all .3s;
-}
-.cid-rUGeOQF9Fa .mbr-slider .carousel-control.carousel-control-prev {
-  left: 0;
-  margin-left: 2.5rem;
-}
-.cid-rUGeOQF9Fa .mbr-slider .carousel-control.carousel-control-next {
-  right: 0;
-  margin-right: 2.5rem;
-}
-.cid-rUGeOQF9Fa .mbr-slider .carousel-control .mbr-iconfont {
-  font-size: 2rem;
-}
-@media (max-width: 767px) {
-  .cid-rUGeOQF9Fa .mbr-slider .carousel-control {
-    top: auto;
-    bottom: 1rem;
-  }
-}
-.cid-rUGeOQF9Fa .mbr-slider .carousel-indicators {
-  position: absolute;
-  bottom: 0;
-  margin-bottom: 1.5rem !important;
-}
-.cid-rUGeOQF9Fa .mbr-slider .carousel-indicators li {
-  max-width: 20px;
-  width: 20px;
-  height: 20px;
-  max-height: 20px;
-  margin: 3px;
-  background-color: rgba(0, 0, 0, 0.5);
-  border: 2px solid #fff;
-  border-radius: 50%;
-  opacity: .5;
-  transition: all .3s;
-}
-.cid-rUGeOQF9Fa .mbr-slider .carousel-indicators li.active,
-.cid-rUGeOQF9Fa .mbr-slider .carousel-indicators li:hover {
-  opacity: .9;
-}
-.cid-rUGeOQF9Fa .mbr-slider .carousel-indicators li::after,
-.cid-rUGeOQF9Fa .mbr-slider .carousel-indicators li::before {
-  content: none;
-}
-.cid-rUGeOQF9Fa .mbr-slider .carousel-indicators.ie-fix {
-  left: 50%;
-  display: block;
-  width: 60%;
-  margin-left: -30%;
-  text-align: center;
-}
-@media (max-width: 576px) {
-  .cid-rUGeOQF9Fa .mbr-slider .carousel-indicators {
-    display: none !important;
-  }
-}
-.cid-rUGeOQF9Fa .mbr-slider > .container img {
-  width: 100%;
-}
-.cid-rUGeOQF9Fa .mbr-slider > .container img + .row {
-  position: absolute;
-  top: 50%;
-  right: 0;
-  left: 0;
-  z-index: 2;
-  -moz-transform: translateY(-50%);
-  -webkit-transform: translateY(-50%);
-  transform: translateY(-50%);
-}
-.cid-rUGeOQF9Fa .mbr-slider > .container .carousel-indicators {
-  margin-bottom: 3px;
-}
-@media (max-width: 576px) {
-  .cid-rUGeOQF9Fa .mbr-slider > .container .carousel-control {
-    margin-bottom: 0;
-  }
-}
-.cid-rUGeOQF9Fa .mbr-slider .mbr-section {
-  padding: 0;
-  background-attachment: scroll;
-}
-.cid-rUGeOQF9Fa .mbr-slider .mbr-table-cell {
-  padding: 0;
-}
-.cid-rUGeOQF9Fa .carousel-item .container.container-slide {
-  position: initial;
-  width: auto;
-  min-height: 0;
-}
-.cid-rUGeOQF9Fa .full-screen .slider-fullscreen-image {
-  min-height: 100vh;
-  background-repeat: no-repeat;
-  background-position: 50% 50%;
-  background-size: cover;
-}
-.cid-rUGeOQF9Fa .full-screen .slider-fullscreen-image.active {
-  display: -o-flex;
-}
-.cid-rUGeOQF9Fa .full-screen .container {
-  width: auto;
-  padding-right: 0;
-  padding-left: 0;
-}
-.cid-rUGeOQF9Fa .full-screen .carousel-item .container.container-slide {
-  width: 100%;
-  min-height: 100vh;
-  padding: 0;
-}
-.cid-rUGeOQF9Fa .full-screen .carousel-item .container.container-slide img {
-  display: none;
-}
-.cid-rUGeOQF9Fa .mbr-background-video-preview {
-  position: absolute;
-  top: 0;
-  right: 0;
-  bottom: 0;
-  left: 0;
-}
-.cid-rUGeOQF9Fa .mbr-overlay ~ .container-slide {
-  z-index: auto;
-}
-.cid-rUGeOQF9Fa P {
-  text-align: left;
-}
-.cid-rUGeOQF9Fa H2 {
-  text-align: left;
+.cid-sXkjqiaAhq .mbr-text,
+.cid-sXkjqiaAhq .mbr-section-btn {
+  text-align: right;
 }
 .cid-rJGX3feLQP {
   padding-top: 60px;
