--- a/assets/mobirise/css/mbr-additional.css
+++ b/assets/mobirise/css/mbr-additional.css
@@ -740,6 +740,10 @@ section.lazy-placeholder:after {
   color: #767676;
   text-align: center;
 }
+.cid-t6tUjfDR2E {
+  padding-top: 120px;
+  padding-bottom: 120px;
+}
 .cid-sXkgkbgBZG {
   padding-top: 120px;
   padding-bottom: 120px;
